[gd_scene load_steps=3 format=3 uid="uid://ylld2r7ibx7v"]

[ext_resource type="Script" uid="uid://cvu203fs3fjhs" path="res://settings.gd" id="1_nkug2"]
[ext_resource type="PackedScene" uid="uid://bmt2ot1vxqb8i" path="res://block.tscn" id="1_x2hje"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_nkug2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 868.0
offset_top = 88.0
offset_right = 1468.0
offset_bottom = 664.0
scale = Vector2(0.2, 0.2)

[node name="BlockColor" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Block" parent="VBoxContainer/BlockColor" instance=ExtResource("1_x2hje")]
position = Vector2(-220, 160)
scale = Vector2(12, 12)

[node name="BGColor" type="ColorPicker" parent="VBoxContainer/BlockColor"]
layout_mode = 2

[node name="BorderColor" type="ColorPicker" parent="VBoxContainer/BlockColor"]
layout_mode = 2

[node name="BackButton" type="Button" parent="."]
offset_left = 40.0
offset_top = 57.0
offset_right = 159.0
offset_bottom = 110.0
theme_override_font_sizes/font_size = 32
text = "<- Back"

[node name="NumberColor" type="HBoxContainer" parent="."]
offset_left = 804.0
offset_top = 229.0
offset_right = 1727.0
offset_bottom = 801.0
scale = Vector2(0.2, 0.2)

[node name="Label" type="Label" parent="NumberColor"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 128
theme_override_font_sizes/font_size = 384
text = "8 
"

[node name="NumberColor" type="ColorPicker" parent="NumberColor"]
layout_mode = 2

[node name="NumberOutline" type="ColorPicker" parent="NumberColor"]
layout_mode = 2

[node name="GradientColors" type="HBoxContainer" parent="."]
offset_left = 305.0
offset_top = 370.0
offset_right = 345.0
offset_bottom = 410.0

[node name="Label" type="Label" parent="."]
offset_left = 321.0
offset_top = 298.0
offset_right = 702.0
offset_bottom = 365.0
theme_override_font_sizes/font_size = 48
text = "Explosion Colors"

[connection signal="color_changed" from="VBoxContainer/BlockColor/BGColor" to="." method="_on_bg_color_color_changed"]
[connection signal="color_changed" from="VBoxContainer/BlockColor/BorderColor" to="." method="_on_border_color_color_changed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="color_changed" from="NumberColor/NumberColor" to="." method="_on_number_color_color_changed"]
[connection signal="color_changed" from="NumberColor/NumberOutline" to="." method="_on_number_outline_color_changed"]
